1. IPtables 2. 大端与小端